<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.z00842877.ulbikespots.List">

    <ListView
        android:id="@+id/note_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/List_Button1"
        android:text="@string/List_But1"
        android:layout_below="@+id/note_list_view"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/List_Button2"
        android:text="@string/List_But2"
        android:layout_below="@+id/List_Button1"
        android:layout_toRightOf="@+id/but1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/List_Button3"
        android:text="@string/List_But3"
        android:layout_below="@+id/List_Button2"
        />

</RelativeLayout>


