<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".EntryScreen">

    <TextView android:text="@string/message"
        android:layout_width="wrap_content"
        android:id="@+id/message"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:name="com.google.android.gms.maps.MapFragment"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_below="@+id/message"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/but1"
        android:text="@string/button1"
        android:layout_below="@+id/map"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/but2"
        android:text="@string/button2"
        android:layout_below="@+id/map"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/but1"/>

</RelativeLayout>
